force-app/main/default/objects/HAM_Event_Sales_Document__c/HAM_Event_Sales_Document__c.object-meta.xml
<CustomObject>
    <description>Stores sales document records migrated from Blackthorn (bt_stripe__Sales_Document__c) to support the Blackthorn to Cvent migration. Pending stakeholder decision on long-term data model.</description>
    <label>HAM Event Sales Document</label>
    <nameField>
        <displayFormat>SD-{00000000}</displayFormat>
        <label>Sales Document Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>HAM Event Sales Documents</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>