force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/CventEvents_Event__c.field-meta.xml
<CustomField>
    <fullName>CventEvents_Event__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Cvent event this sales document is associated with.</description>
    <inlineHelpText>The Cvent event linked to this sales document.</inlineHelpText>
    <label>Cvent Event</label>
    <referenceTo>CventEvents__Event__c</referenceTo>
    <relationshipLabel>HAM Event Sales Documents</relationshipLabel>
    <relationshipName>HAM_Event_Sales_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>