force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Attendee_Group__c.field-meta.xml
<CustomField>
    <fullName>HAM_Attendee_Group__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the attendee group this sales document was issued for.</description>
    <inlineHelpText>The attendee group associated with this sales document.</inlineHelpText>
    <label>Attendee Group</label>
    <referenceTo>HAM_Event_Attendee_Group__c</referenceTo>
    <relationshipLabel>HAM Event Sales Documents</relationshipLabel>
    <relationshipName>HAM_Event_Sales_Documents_Group</relationshipName>
    <type>Lookup</type>
</CustomField>