force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Balance_Due__c.field-meta.xml
<CustomField>
    <fullName>HAM_Balance_Due__c</fullName>
    <description>Remaining balance outstanding on this sales document.</description>
    <inlineHelpText>Amount still owed on this sales document.</inlineHelpText>
    <label>Balance Due</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>