force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Balance_Paid__c.field-meta.xml
<CustomField>
    <fullName>HAM_Balance_Paid__c</fullName>
    <description>Total amount paid to date on this sales document.</description>
    <inlineHelpText>Amount already collected on this sales document.</inlineHelpText>
    <label>Balance Paid</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>