force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_Account__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Account billed for this sales document. Migrated from bt_stripe__Bill_To__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>The billing account from the original Blackthorn invoice.</inlineHelpText>
    <label>Bill To Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Sales Documents (Bill To)</relationshipLabel>
    <relationshipName>HAM_Bill_To_Sales_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>