force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_City__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_City__c</fullName>
    <description>Billing city. Migrated from bt_stripe__Bill_To_City__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>City of the billing contact at time of invoice.</inlineHelpText>
    <label>Bill To City</label>
    <length>80</length>
    <type>Text</type>
</CustomField>