force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_Contact__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the contact responsible for payment on this sales document.</description>
    <inlineHelpText>The bill-to contact for this sales document.</inlineHelpText>
    <label>Bill To Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>HAM Event Sales Documents</relationshipLabel>
    <relationshipName>HAM_Event_Sales_Documents_BillTo</relationshipName>
    <type>Lookup</type>
</CustomField>