force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_Country__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Country__c</fullName>
    <description>Billing country. Migrated from bt_stripe__Bill_To_Country__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Country of the billing contact at time of invoice.</inlineHelpText>
    <label>Bill To Country</label>
    <length>80</length>
    <type>Text</type>
</CustomField>