force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Last_Name__c</fullName>
    <description>Billing contact last name. Migrated from bt_stripe__Bill_To_Last_Name__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Last name of the billing contact at time of invoice.</inlineHelpText>
    <label>Bill To Last Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>