force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_Name__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Name__c</fullName>
    <description>Account name at time of billing. Migrated from bt_stripe__Bill_To_Name__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Organization name as it appeared on the Blackthorn invoice.</inlineHelpText>
    <label>Bill To Account Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>