force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Postal_Code__c</fullName>
    <description>Billing postal code. Migrated from bt_stripe__Bill_To_Postal_Code__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Postal code of the billing contact at time of invoice.</inlineHelpText>
    <label>Bill To Postal Code</label>
    <length>20</length>
    <type>Text</type>
</CustomField>