force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_State__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_State__c</fullName>
    <description>Billing state. Migrated from bt_stripe__Bill_To_State__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>State of the billing contact at time of invoice.</inlineHelpText>
    <label>Bill To State</label>
    <length>80</length>
    <type>Text</type>
</CustomField>