force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Bill_To_Street__c.field-meta.xml
<CustomField>
    <fullName>HAM_Bill_To_Street__c</fullName>
    <description>Billing street address line 1. Migrated from bt_stripe__Bill_To_Street__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Street address line 1 of the billing contact at time of invoice.</inlineHelpText>
    <label>Bill To Street</label>
    <length>255</length>
    <type>Text</type>
</CustomField>