force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>HAM_Billing_Method__c</fullName>
    <description>Billing method used for this invoice. Migrated from bt_stripe__Billing_Method__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>The billing method from the original Blackthorn invoice.</inlineHelpText>
    <label>Billing Method</label>
    <length>255</length>
    <type>Text</type>
</CustomField>