force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_BT_Sales_Document__c.field-meta.xml
<CustomField>
    <fullName>HAM_BT_Sales_Document__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Traceability lookup to the original Blackthorn sales document this record was migrated from. Will be empty once Blackthorn is decommissioned.</description>
    <inlineHelpText>The original Blackthorn sales document this record was migrated from. Used for migration QC and validation only.</inlineHelpText>
    <label>BT Sales Document</label>
    <referenceTo>bt_stripe__Sales_Document__c</referenceTo>
    <relationshipLabel>HAM Event Sales Documents</relationshipLabel>
    <relationshipName>HAM_Event_Sales_Documents_BT</relationshipName>
    <type>Lookup</type>
</CustomField>