force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Currency_ISO__c.field-meta.xml
<CustomField>
    <fullName>HAM_Currency_ISO__c</fullName>
    <description>ISO currency code for this invoice. Migrated from bt_stripe__Currency_ISO__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Currency code (e.g. USD) from the original Blackthorn invoice.</inlineHelpText>
    <label>Currency ISO</label>
    <length>10</length>
    <type>Text</type>
</CustomField>