force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Discount_Amount__c</fullName>
    <description>Total discount amount applied to this sales document.</description>
    <inlineHelpText>Discount deducted from the subtotal on this sales document.</inlineHelpText>
    <label>Discount Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>