force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Due_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Due_Date__c</fullName>
    <description>Date payment was due. Migrated from bt_stripe__Due_Date__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>The payment due date from the original Blackthorn invoice.</inlineHelpText>
    <label>Due Date</label>
    <type>Date</type>
</CustomField>