force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Email__c.field-meta.xml
<CustomField>
    <fullName>HAM_Email__c</fullName>
    <description>Email address on the invoice. Migrated from bt_stripe__Email__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Email address as it appeared on the Blackthorn invoice.</inlineHelpText>
    <label>Email</label>
    <type>Email</type>
</CustomField>