force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Issue_Date__c.field-meta.xml
<CustomField>
    <fullName>HAM_Issue_Date__c</fullName>
    <description>Date the invoice was issued. Migrated from bt_stripe__Issue_Date__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>The date this invoice was issued in the Blackthorn system.</inlineHelpText>
    <label>Issue Date</label>
    <type>Date</type>
</CustomField>