force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Memo__c.field-meta.xml
<CustomField>
    <fullName>HAM_Memo__c</fullName>
    <description>Invoice memo or notes. Migrated from bt_stripe__Memo__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Any memo or notes from the original Blackthorn invoice.</inlineHelpText>
    <label>Memo</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>