force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Net_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Net_Amount__c</fullName>
    <description>Gross amount on the invoice. Migrated from bt_stripe__Net_Amount__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Gross amount as it appeared on the original Blackthorn invoice.</inlineHelpText>
    <label>Gross Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>