force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Paid_In_Full__c.field-meta.xml
<CustomField>
    <fullName>HAM_Paid_In_Full__c</fullName>
    <description>Timestamp when payment was completed in full. Migrated from bt_stripe__Paid_In_Full__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Date and time the invoice was paid in full in the Blackthorn system.</inlineHelpText>
    <label>Paid In Full</label>
    <type>DateTime</type>
</CustomField>