force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Payment_Gateway__c.field-meta.xml
<CustomField>
    <fullName>HAM_Payment_Gateway__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Payment gateway used for this invoice. Migrated from bt_stripe__Payment_Gateway__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>The Blackthorn payment gateway record used to process this invoice.</inlineHelpText>
    <label>Payment Gateway</label>
    <referenceTo>bt_stripe__Payment_Gateway__c</referenceTo>
    <relationshipLabel>Sales Documents</relationshipLabel>
    <relationshipName>HAM_Payment_Gateway_Sales_Documents</relationshipName>
    <type>Lookup</type>
</CustomField>