force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Payment_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Payment_Status__c</fullName>
    <description>Payment status of this sales document as migrated from Blackthorn.</description>
    <inlineHelpText>Current payment status of this sales document (e.g. Paid, Unpaid, Partial).</inlineHelpText>
    <label>Payment Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>