force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Phone__c.field-meta.xml
<CustomField>
    <fullName>HAM_Phone__c</fullName>
    <description>Phone number on the invoice. Migrated from bt_stripe__Phone__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Phone number as it appeared on the Blackthorn invoice.</inlineHelpText>
    <label>Phone</label>
    <type>Phone</type>
</CustomField>