force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Status__c.field-meta.xml
<CustomField>
    <fullName>HAM_Status__c</fullName>
    <description>Document status migrated from bt_stripe__Status__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Status of the Blackthorn sales document (e.g. Completed, Draft).</inlineHelpText>
    <label>Status</label>
    <length>255</length>
    <type>Text</type>
</CustomField>