force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Stripe_Invoice_Id__c.field-meta.xml
<CustomField>
    <fullName>HAM_Stripe_Invoice_Id__c</fullName>
    <description>Stripe invoice identifier for audit trail. Migrated from bt_stripe__Stripe_Invoice_Id__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>The Stripe invoice ID from the original Blackthorn record.</inlineHelpText>
    <label>Stripe Invoice ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>