force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Stripe_Invoice_Link__c.field-meta.xml
<CustomField>
    <fullName>HAM_Stripe_Invoice_Link__c</fullName>
    <description>Stripe hosted invoice URL for support lookups. Migrated from bt_stripe__Stripe_Hosted_Invoice_Link__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>Direct link to the hosted Stripe invoice from the Blackthorn record.</inlineHelpText>
    <label>Stripe Invoice Link</label>
    <type>Url</type>
</CustomField>