force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Subtotal_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Subtotal_Amount__c</fullName>
    <description>Subtotal amount before tax and discounts are applied.</description>
    <inlineHelpText>Pre-tax, pre-discount subtotal for this sales document.</inlineHelpText>
    <label>Subtotal Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>