force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Tax_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Tax_Amount__c</fullName>
    <description>Tax amount applied to this sales document.</description>
    <inlineHelpText>Tax portion of the total amount on this sales document.</inlineHelpText>
    <label>Tax Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>