force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Tax_Rate__c.field-meta.xml
<CustomField>
    <fullName>HAM_Tax_Rate__c</fullName>
    <description>Tax rate applied to this invoice. Migrated from bt_stripe__Tax_Rate__c on bt_stripe__Sales_Document__c.</description>
    <inlineHelpText>The tax rate percentage from the original Blackthorn invoice.</inlineHelpText>
    <label>Tax Rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>