force-app/main/default/objects/HAM_Event_Sales_Document__c/fields/HAM_Total_Amount__c.field-meta.xml
<CustomField>
    <fullName>HAM_Total_Amount__c</fullName>
    <description>Total amount on this sales document including tax and fees.</description>
    <inlineHelpText>Total charged amount on this sales document.</inlineHelpText>
    <label>Total Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>